--- a/gui/index.html
+++ b/gui/index.html
@@ -108,7 +108,7 @@
 							</div>
 
 							<button class="btn btn-success btn-large">Analyze</button>
-							<button class="btn btn-success btn-large disabled">Build</button>
+							<button class="btn btn-success btn-large BUILD_ACTION">Build</button>
 						</div>
 						<hr/>
 						<div class="data-status">
