Debug integration on GUI

--- a/gui/index.html
+++ b/gui/index.html
@@ -77,7 +77,7 @@
 								<label class="control-label" for="sourceFolder">Source Folder:</label>
 								<div class="controls">
 									<input type="file" nwdirectory id="sourceFolder_input" class="hidden"/>
-									<input type="text" id="sourceFolder" class="input-xlarge">
+									<input type="text" id="sourceFolder" class="input-xlarge" value="D:\DEVEL\jsdoc3_test_code">
 									<button class="btn btn-primary">Select Folder</button>
 								</div>
 							</div>
@@ -85,7 +85,7 @@
 								<label class="control-label" for="outputFolder">Output Folder:</label>
 								<div class="controls">
 									<input type="file" nwdirectory id="outputFolder_input" class="hidden"/>
-									<input type="text" id="outputFolder" class="input-xlarge">
+									<input type="text" id="outputFolder" class="input-xlarge" value="D:\DEVEL\jsdoc3Template\out">
 									<button class="btn btn-primary">Select Folder</button>
 								</div>
 							</div>
